--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   <p><a href="https://www.copilotup.com" target="_blank">Former Co-founder and CEO of Copilot</a></p>
 
   <p class="social-icons">
-    <a href="https://github.com/rohansampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
+    <a href="https://github.com/rohan-sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
     <a href="https://www.linkedin.com/in/rohansampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg" alt="LinkedIn"></a>
-    <a href="https://twitter.com/rohansampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/twitter.svg" alt="Twitter"></a>
+    <a href="https://twitter.com/rohan_sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/twitter.svg" alt="Twitter"></a>
   </p>
 
   <div class="tabs">
