--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <h1>Rohan Sampath</h1>
   <p style="font-size: 1.2em;">Builder of AI Products | Entrepreneur</p>
-  <p><a href="https://www.copilotup.com" target="_blank">Former Co-founder and CEO of Copilot</a></p>
+  <p>Former Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
 
   <p class="social-icons">
     <a href="https://github.com/rohan-sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
