--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-  <img src="A58ED7CB-44D4-46DA-AC83-4B475DE16D26.png" alt="Rohan Sampath" class="profile-pic">
+  <img src="rohan_photo.jpg" alt="Rohan Sampath" class="profile-pic">
 
   <h1>Rohan Sampath</h1>
   <p style="font-size: 1.2em;">Builder of AI Products | Entrepreneur</p>
