--- a/index.html
+++ b/index.html
@@ -4,66 +4,93 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rohan Sampath</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      margin: 40px;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background-color: #fff;
       color: #222;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
-    h1 {
-      font-size: 2.5em;
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      flex-wrap: wrap;
+    }
+    img.profile-pic {
+      width: 180px;
+      border-radius: 12px;
+    }
+    .header-text h1 {
+      font-size: 2.8em;
       margin-bottom: 0.2em;
+      font-weight: 600;
+    }
+    .header-text p {
+      margin: 4px 0;
+      font-size: 1.2em;
     }
     .social-icons img {
       width: 24px;
-      margin-right: 10px;
+      margin-right: 12px;
     }
     .tabs {
-      margin-top: 20px;
+      margin-top: 30px;
     }
     .tab-button {
       padding: 10px 20px;
       border: none;
-      border-bottom: 2px solid transparent;
+      border-bottom: 3px solid transparent;
       font-size: 1em;
       cursor: pointer;
       background: none;
+      font-weight: 500;
+      color: #555;
     }
     .tab-button.active {
-      border-bottom: 2px solid #000;
-      font-weight: bold;
+      border-bottom: 3px solid #6a0dad;
+      color: #000;
     }
     .tab-content {
       margin-top: 20px;
     }
-    img.profile-pic {
-      width: 150px;
-      border-radius: 10px;
-      margin-bottom: 20px;
+    .social-icons a[href*="linkedin"] img {
+      filter: invert(19%) sepia(87%) saturate(1596%) hue-rotate(183deg) brightness(92%) contrast(92%);
+    }
+    .social-icons a[href*="twitter"] img {
+      filter: invert(41%) sepia(98%) saturate(747%) hue-rotate(178deg) brightness(92%) contrast(89%);
+    }
+    .email {
+      margin-top: 10px;
+      font-size: 0.95em;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
-  <img src="rohan_photo.jpg" alt="Rohan Sampath" class="profile-pic">
-
-  <h1>Rohan Sampath</h1>
-  <p style="font-size: 1.2em;">Builder of AI Products | Entrepreneur</p>
-  <p>Former Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
-
-  <p class="social-icons">
-    <a href="https://github.com/rohan-sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
-    <a href="https://www.linkedin.com/in/rohansampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg" alt="LinkedIn"></a>
-    <a href="https://twitter.com/rohan_sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/twitter.svg" alt="Twitter"></a>
-  </p>
+  <div class="header">
+    <img src="rohan_photo.jpg" alt="Rohan Sampath" class="profile-pic">
+    <div class="header-text">
+      <h1>Rohan Sampath</h1>
+      <p>Builder of AI Products | Entrepreneur</p>
+      <p>Former Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
+      <p class="email">📧 rohan.s94 ατ gmail.com</p>
+      <p class="social-icons">
+        <a href="https://github.com/rohan-sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/rohansampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg" alt="LinkedIn"></a>
+        <a href="https://twitter.com/rohan_sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/twitter.svg" alt="Twitter"></a>
+      </p>
+    </div>
+  </div>
 
   <div class="tabs">
     <button class="tab-button active" onclick="showTab('bio', this)">BIO</button>
-    <button class="tab-button" onclick="showTab('apps', this)">AI APPLICATIONS</button>
+    <button class="tab-button" onclick="showTab('apps', this)">PROJECTS</button>
+    <button class="tab-button" onclick="showTab('other', this)">OTHER</button>
   </div>
 
   <div id="bio" class="tab-content">
@@ -81,6 +108,10 @@
 
   <div id="apps" class="tab-content" style="display:none;">
     <p>Coming soon: A full list of my AI projects with links, objectives, technical goals, and GitHub repos.</p>
+  </div>
+
+  <div id="other" class="tab-content" style="display:none;">
+    <p>Other interests, writings, or projects may go here.</p>
   </div>
 
   <script>
