--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="header-text">
       <h1>Rohan Sampath</h1>
       <p>Builder of AI Products | Entrepreneur</p>
-      <p>Former Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
+      <p>Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
       <p class="email">📧 rohan.s94 ατ gmail.com</p>
       <p class="social-icons">
         <a href="https://github.com/rohan-sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
