--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="header-text">
       <h1>Rohan Sampath</h1>
       <p>Builder of AI Products | Entrepreneur</p>
-      <p>Former Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
+      <p>Co-founder and CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a></p>
       <p style="font-size: 1em; color: #555;">rohan.s94 ατ gmail.com</p>
       <p class="social-icons">
         <a href="https://github.com/rohan-sampath" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub"></a>
@@ -108,7 +108,7 @@
   </div>
 
   <div id="other" class="tab-content" style="display:none;">
-    <p>Other interests, writings, or projects may go here.</p>
+    <p>I enjoy </p>
   </div>
 
   <script>
