--- a/index.html
+++ b/index.html
@@ -107,9 +107,15 @@
     <p>Coming soon: A full list of my AI projects with links, objectives, technical goals, and GitHub repos.</p>
   </div>
 
-  <div id="other" class="tab-content" style="display:none;">
-    <p>I enjoy </p>
-  </div>
+<div id="other" class="tab-content" style="display:none;">
+  <p><strong>🎙️ Podcast:</strong> I ran the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a> — a show featuring CEOs and executives on how they’re implementing AI in their businesses, as well as technical discussions with academics on AI trends. Past guests include the CEOs of G2, PandaDoc, People.ai, and Degreed (all with $1B+ valuations).</p>
+
+  <p><strong>🧠 Interests:</strong> My other interests include Geopolitics, Linguistics, Psephology (Election Analysis), Cartography, Swimming, Tennis, and Road Biking.</p>
+
+  <p>I created <a href="https://github.com/rohan-sampath/india-constituencies-game" target="_blank">Guess the Constituency</a> — a game for the Indian General Election 2024, and I'm currently working on <a href="https://github.com/rohan-sampath/343Canada" target="_blank">343Canada</a> — a website to predict and model Canadian federal elections.</p>
+
+  <p><strong>🌍 Identity:</strong> I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Kid</a> — having lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
+</div>
 
   <script>
     function navigateTo(tabName) {
