--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Rohan Sampath | AI Product Builder, Entrepreneur, Podcast Host, and Research Enthusiast">
+  <meta name="description" content="Rohan Sampath | AI Product Builder & Entrepreneur">
   <title>Rohan Sampath</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
