--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
   </div>
 
   <div id="other" class="tab-content" style="display:none;">
-    <p><strong>🎙️ Podcast:</strong> I ran the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a> — a show featuring CEOs and executives on how they’re implementing AI in their businesses, as well as technical discussions with academics on AI trends. Past guests include the CEOs of G2, PandaDoc, People.ai, and Degreed (all with $1B+ valuations).</p>
-
-    <p><strong>🧠 Interests:</strong> My other interests include Geopolitics, Linguistics, Psephology (Election Analysis), Cartography, Swimming, Tennis, and Road Biking.</p>
+    <p><strong>🧠 Interests:</strong> My other interests include Geopolitics, Linguistics, Psephology (Election Analysis), Cartography, Skiing, Swimming, Tennis, and Road Biking. I've done several multi-day road bikes (SF to LA, Oregon Coast, Vancouver Island). </p>
 
     <p>I created <a href="https://github.com/rohan-sampath/india-constituencies-game" target="_blank">Guess the Constituency</a> — a game for the Indian General Election 2024, and I'm currently working on <a href="https://github.com/rohan-sampath/343Canada" target="_blank">343Canada</a> — a website to predict and model Canadian federal elections.</p>
 
-    <p>🌍 I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Kid</a> — having lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
+<p><strong>🎙️ Podcast:</strong> I hosted the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a>, where I spoke with CEOs and executives about how they’re deploying AI in their businesses, as well as with academics on emerging trends in AI. Past guests include the CEOs of <a href="https://www.g2.com" target="_blank">G2</a>, <a href="https://www.pandadoc.com" target="_blank">PandaDoc</a>, <a href="https://www.people.ai" target="_blank">People.ai</a>, and <a href="https://www.degreed.com" target="_blank">Degreed</a> — all companies with $1B+ valuations.</p>
+
+    <p>🌍 I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Kid</a> — I've lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
   </div>
 
   <script>
