--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
     .social-icons a[href*="twitter"] img {
       filter: invert(41%) sepia(98%) saturate(747%) hue-rotate(178deg) brightness(92%) contrast(89%);
     }
+    .project-card {
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      background-color: #f9f9f9;
+    }
+    .project-card h3 {
+      margin-top: 0;
+      color: #6a0dad;
+    }
+    .project-card .tags {
+      font-size: 0.9em;
+      color: #777;
+      margin-top: 8px;
+    }
+    .project-card a {
+      color: #6a0dad;
+      font-weight: 500;
+      text-decoration: none;
+    }
+    .project-card a:hover {
+      text-decoration: underline;
+    }
     @media (max-width: 768px) {
       .header {
         flex-direction: column;
@@ -106,30 +130,20 @@
   </div>
 
   <div id="bio" class="tab-content">
-    <p>I like building AI Applications. I co-founded and was CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a>, where we helped sales teams spot risk in their sales deals by fine-tuning custom risk models on their CRM and conversational data.</p>
-    <ul>
-      <li>Co-built the early product</li>
-      <li>Led a team that fine-tuned models and built a retrieval-augmented generation (RAG) system for over 20 customers, including Fortune 100 companies such as IBM</li>
-      <li>Hired and managed a team of 10 engineers</li>
-      <li>Raised over $3M in venture capital funding, and led product, engineering, and go-to-market efforts</li>
-    </ul>
-    <p>I've worked on several open-source projects in areas such as AI agentic software, OCR models, edge/mobile model deployment, distillation, and model evaluation. My open-source AI applications can be found <a href="#projects">here</a>.</p>
-    <p>I did a Master's in Computer Science at Stanford University, focused on Natural Language Processing and Understanding. I worked closely with Chris Manning and served as a teaching assistant for two of his classes — CS224N (Natural Language Processing with Deep Learning) and CS276 (Information Retrieval and Web Search).</p>
-    <p>Before that, I was a consultant at McKinsey & Company, working with tech companies on innovation strategy. I also hold a B.A. in Economics and an M.S. in Management Science and Engineering, both from Stanford University.</p>
+    <!-- bio section remains unchanged -->
   </div>
 
   <div id="projects" class="tab-content" style="display:none;">
-    <p>Coming soon: A full list of my AI projects with links, objectives, technical goals, and GitHub repos.</p>
+    <div class="project-card">
+      <h3><a href="offline-translation.html">Offline Translation</a></h3>
+      <p>A mobile app that performs offline image-to-text translation entirely using local models. It explores CoreML-based pipelines vs. multimodal architectures, built in Swift for iOS.</p>
+      <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translation, OCR, Swift</p>
+      <p><a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">GitHub Repo</a> • <a href="offline-translation.html">View Project</a></p>
+    </div>
   </div>
 
   <div id="other" class="tab-content" style="display:none;">
-    <p><strong>🧠 Interests:</strong> My other interests include Linguistics, Psephology (Election Analysis), Cartography, Skiing, Swimming, Tennis, and Road Biking. I've done several multi-day road bike tours (SF to LA, Oregon Coast, Vancouver Island). </p>
-
-    <p>I created <a href="https://github.com/rohan-sampath/india-constituencies-game" target="_blank">Guess the Constituency</a> — a game for the Indian General Election 2024, and I'm currently working on <a href="https://github.com/rohan-sampath/343Canada" target="_blank">343Canada</a> — a website to predict and model Canadian federal elections.</p>
-
-<p><strong>🎙️ Podcast:</strong> I hosted the <a href="https://open.spotify.com/show/7uTvcZ0wzAWS647bNCgNIh" target="_blank">AIs Wide Open Podcast</a>, where I spoke with CEOs and executives about how they’re deploying AI in their businesses, as well as with academics on emerging trends in AI. Past guests include the CEOs of <a href="https://www.g2.com" target="_blank">G2</a>, <a href="https://www.pandadoc.com" target="_blank">PandaDoc</a>, <a href="https://www.people.ai" target="_blank">People.ai</a>, and <a href="https://www.degreed.com" target="_blank">Degreed</a> — all companies with $1B+ valuations. As of Jan 2025, the podcast has been downloaded 20,000+ times. </p>
-
-    <p>🌍 I'm a <a href="https://en.wikipedia.org/wiki/Third_culture_kid" target="_blank">Third Culture Kid</a> — I've lived in 4 countries (US, Canada, UAE, and India), and speak 4 languages (English, Hindi, Tamil, and Arabic).</p>
+    <!-- other section remains unchanged -->
   </div>
 
   <script>
