--- a/index.html
+++ b/index.html
@@ -130,7 +130,16 @@
   </div>
 
   <div id="bio" class="tab-content">
-    <!-- bio section remains unchanged -->
+    <p>I like building AI Applications. I co-founded and was CEO of <a href="https://www.copilotup.com" target="_blank">Copilot</a>, where we helped sales teams spot risk in their sales deals by fine-tuning custom risk models on their CRM and conversational data.</p>
+    <ul>
+      <li>Co-built the early product</li>
+      <li>Led a team that fine-tuned models and built a retrieval-augmented generation (RAG) system for over 20 customers, including Fortune 100 companies such as IBM</li>
+      <li>Hired and managed a team of 10 engineers</li>
+      <li>Raised over $3M in venture capital funding, and led product, engineering, and go-to-market efforts</li>
+    </ul>
+    <p>I've worked on several open-source projects in areas such as AI agentic software, OCR models, edge/mobile model deployment, distillation, and model evaluation. My open-source AI applications can be found <a href="#projects">here</a>.</p>
+    <p>I did a Master's in Computer Science at Stanford University, focused on Natural Language Processing and Understanding. I worked closely with Chris Manning and served as a teaching assistant for two of his classes — CS224N (Natural Language Processing with Deep Learning) and CS276 (Information Retrieval and Web Search).</p>
+    <p>Before that, I was a consultant at McKinsey & Company, working with tech companies on innovation strategy. I also hold a B.A. in Economics and an M.S. in Management Science and Engineering, both from Stanford University.</p>
   </div>
 
   <div id="projects" class="tab-content" style="display:none;">
