--- a/index.html
+++ b/index.html
@@ -145,9 +145,13 @@
   <div id="projects" class="tab-content" style="display:none;">
     <div class="project-card">
       <h3><a href="offline-translation.html">Offline Translation</a></h3>
-      <p>A mobile app that performs offline image-to-text translation entirely using local models. It explores CoreML-based pipelines vs. multimodal architectures, built in Swift for iOS.</p>
+      <p>A mobile app that performs offline image-to-text translation entirely using local models. It explores CoreML-based pipelines vs. multimodal architectures, built in Swift for iOS. <strong>Key result:</strong> Using a small, locally deployed multimodal model (i) improves text recognition and translation quality, and (ii) enhances support for low-resource languages, outperforming the Apple Translate app.</p>
       <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translation, OCR, Swift</p>
-      <p><a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">GitHub Repo</a> • <a href="offline-translation.html">View Project</a></p>
+      <p>
+        <a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">
+          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub">
+        </a>
+      </p>
     </div>
   </div>
 
