--- a/offline-translation.html
+++ b/offline-translation.html
@@ -98,7 +98,7 @@
 
   <div id="design-doc" class="tab-content">
     <h2>Design Doc</h2>
-    <p>[Diagram placeholder — Excalidraw image or architecture sketch to be added here]</p>
+    <img src="OfflineTranslation_DesignDoc.png" alt="Design Document for Offline Translation" style="max-width:100%; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px;">
   </div>
 
   <div id="evaluation" class="tab-content">
