--- a/index.html
+++ b/index.html
@@ -142,19 +142,31 @@
     <p>Before that, I was a consultant at McKinsey & Company, working with tech companies on innovation strategy. I also hold a B.A. in Economics and an M.S. in Management Science and Engineering, both from Stanford University.</p>
   </div>
 
-  <div id="projects" class="tab-content" style="display:none;">
-    <div class="project-card">
-      <h3><a href="offline-translation.html">Offline Translation</a></h3>
-      <p>A mobile app that performs offline image-to-text translation entirely using local models. It explores CoreML-based pipelines vs. multimodal architectures, built in Swift for iOS. <strong>Key result:</strong> Using a small, locally deployed multimodal model (i) improves text recognition and translation quality, and (ii) enhances support for low-resource languages, outperforming the Apple Translate app.</p>
-      <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translation, OCR, Swift</p>
-      <p>
-        <a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">
-          <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub">
-        </a>
-      </p>
-    </div>
+<div id="projects" class="tab-content" style="display:none;">
+  <div class="project-card">
+    <h3><a href="offline-translation.html">Offline Translation</a></h3>
+    <p>A mobile app that performs offline image-to-text translation entirely using local models. It explores CoreML-based pipelines vs. multimodal architectures, built in Swift for iOS. <strong>Key result:</strong> Using a small, locally deployed multimodal model (i) improves text recognition and translation quality, and (ii) enhances support for low-resource languages, outperforming the Apple Translate app.</p>
+    <p class="tags">Keywords: CoreML, Apple Vision, Apple Language, Apple Translation, OCR, Swift</p>
+    <p>
+      <a href="https://github.com/rohan-sampath/OfflineTranslation" target="_blank">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+    </p>
   </div>
 
+  <div class="project-card">
+    <h3><a href="#">ScriptForge: LLM-Aided Script Writer</a></h3>
+    <p>A writer assistant tool that helps you draft scripts in multiple formats and genres. Lets you preserve creative control over your style, vision and story while dramatically lowering the time to write a script. <strong>Key differentiator:</strong> fine-grained control over how often the LLM “Writer Agent” takes turns vs. the human writer.</p>
+    <p class="tags">Keywords: LLM agents, ScriptForge, test-time compute, Model Context Protocol, screenwriting, storytelling</p>
+    <p>
+      <a href="https://github.com/rohan-sampath/ScriptForge" target="_blank">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+      <span style="font-size: 0.8em; color: #777;">(currently private as I'm exploring potential commercial applications of this product as well as copyright implications)</span>
+    </p>
+  </div>
+</div>
+  
   <div id="other" class="tab-content" style="display:none;">
     <p><strong>🧠 Interests:</strong> My other interests include Linguistics, Psephology (Election Analysis), Cartography, Skiing, Swimming, Tennis, and Road Biking. I've done several multi-day road bike tours (SF to LA, Oregon Coast, Vancouver Island). </p>
 
