--- a/index.html
+++ b/index.html
@@ -159,10 +159,54 @@
     <p>A writer assistant tool that helps you draft scripts in multiple formats and genres. Lets you preserve creative control over your style, vision and story while dramatically lowering the time to write a script. <strong>Key differentiator:</strong> fine-grained control over how often the LLM “Writer Agent” takes turns vs. the human writer.</p>
     <p class="tags">Keywords: LLM agents, ScriptForge, test-time compute, Model Context Protocol, screenwriting, storytelling</p>
     <p>
-      <a href="https://github.com/rohan-sampath/ScriptForge" target="_blank">
+      <a href="#" target="_blank">
         <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
       </a>
       <span style="font-size: 0.8em; color: #777;">(currently private as I'm exploring potential commercial applications of this product as well as copyright implications)</span>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="#">Head-to-Head Model Evaluator</a></h3>
+    <p>A Hugging Face Space that lets you compare two models—either from Hugging Face or custom uploads—on a selected dataset. Supports built-in or user-defined evaluation scripts. Ideal for benchmarking performance on fine-tuned models or open-weight baselines.</p>
+    <p class="tags">Keywords: model evaluation, custom datasets, Hugging Face, eval harness, LLM comparison</p>
+    <p>
+      <a href="#">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="#">Inference Time & Cost Estimator</a></h3>
+    <p>A calculator-style tool that estimates the latency and cost of running various ML models on different hardware. Input model size, architecture type, batch size, and hardware profile to get real-time insights on cost-performance tradeoffs.</p>
+    <p class="tags">Keywords: latency, inference cost, model architecture, hardware benchmarking, deployment planning</p>
+    <p>
+      <a href="#">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="#">DistillKit: Knowledge Distillation Library</a></h3>
+    <p>A plug-and-play Python library to distill knowledge from larger teacher models into smaller, deployable student models. Features include custom loss functions, selective layer distillation, and task-specific distillation protocols.</p>
+    <p class="tags">Keywords: distillation, model compression, student-teacher learning, deployment-ready, efficiency</p>
+    <p>
+      <a href="#">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="#">Replicating DeepSeek-R1</a></h3>
+    <p>An attempt to replicate the performance of DeepSeek-R1, a language model optimized for reasoning and retrieval. Work includes dataset reconstruction, tokenizer matching, and model architecture alignment to reproduce benchmark scores.</p>
+    <p class="tags">Keywords: DeepSeek, replication, reasoning models, transformer architectures, eval results</p>
+    <p>
+      <a href="#">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
     </p>
   </div>
 </div>
