--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   </div>
 
   <div class="project-card">
-    <h3><a href="#">Replicating DeepSeek-R1</a></h3>
+    <h3><a href="#">Replicating DeepSeek-R1 (In Progress)</a></h3>
     <p>An attempt to replicate the performance of DeepSeek-R1, a language model optimized for reasoning and retrieval. Work includes dataset reconstruction, tokenizer matching, and model architecture alignment to reproduce benchmark scores.</p>
     <p class="tags">Keywords: DeepSeek, replication, reasoning models, transformer architectures, eval results</p>
     <p>
