Added more information

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
   </div>
 
   <div class="project-card">
-    <h3><a href="#">ScriptForge: LLM-Aided Script Writer</a></h3>
-    <p>A writer assistant tool that helps you draft scripts in multiple formats and genres. Lets you preserve creative control over your style, vision and story while dramatically lowering the time to write a script. <strong>Key differentiator:</strong> fine-grained control over how often the LLM “Writer Agent” takes turns vs. the human writer.</p>
+    <h3><a href="scriptforge.html">ScriptForge: LLM-Aided Script Writer</a></h3>
+    <p>A writer assistant tool that helps you draft scripts in multiple formats and genres. Lets you preserve creative control over your style, vision and story while dramatically lowering the time to write a script. <strong>Key differentiator:</strong> fine-grained control over how often the LLM "Writer Agent" takes turns vs. the human writer.</p>
     <p class="tags">Keywords: LLM agents, ScriptForge, test-time compute, Model Context Protocol, screenwriting, storytelling</p>
     <p>
       <a href="#" target="_blank">
@@ -177,6 +177,21 @@
     </p>
   </div>
 
+
+
+  <div class="project-card">
+    <h3><a href="#">ThreeFortyThree Canada</a></h3>
+    <p>A website for predicting and modeling Canadian federal elections. Inspired by 338Canada, this project uses statistical methods to aggregate polling data and project seat counts across Canada's 343 electoral districts. <strong>Key feature:</strong> Interactive maps and visualizations of electoral trends.</p>
+    <p class="tags">Keywords: election modeling, data visualization, polling aggregation, Canadian politics, statistical forecasting</p>
+    <p>
+      <a href="https://github.com/rohan-sampath/343Canada" target="_blank">
+        <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg" alt="GitHub" style="width: 20px; height: 20px;">
+      </a>
+    </p>
+  </div>
+
+  <h3 style="margin-top: 40px; padding-bottom: 10px; border-bottom: 1px solid #ddd;">In Progress</h3>
+  
   <div class="project-card">
     <h3><a href="#">Inference Time & Cost Estimator</a></h3>
     <p>A calculator-style tool that estimates the latency and cost of running various ML models on different hardware. Input model size, architecture type, batch size, and hardware profile to get real-time insights on cost-performance tradeoffs.</p>
@@ -200,7 +215,7 @@
   </div>
 
   <div class="project-card">
-    <h3><a href="#">Replicating DeepSeek-R1 (In Progress)</a></h3>
+    <h3><a href="#">Replicating DeepSeek-R1</a></h3>
     <p>An attempt to replicate the performance of DeepSeek-R1, a language model optimized for reasoning and retrieval. Work includes dataset reconstruction, tokenizer matching, and model architecture alignment to reproduce benchmark scores.</p>
     <p class="tags">Keywords: DeepSeek, replication, reasoning models, transformer architectures, eval results</p>
     <p>
